<resources>
    <string name="app_name">GymRec</string>
    <string name="app_title">GymRecord</string>
    <string name="action_settings">Settings</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="notice">提示</string>

    <string name="view_edit_hint">请输入内容</string>
    <string name="train_subj_page_title">健身计划</string>
    <string name="train_subj_name">健身主题：</string>
    <string name="train_subj_name_hint">点击修改健身主题</string>
    <string name="train_subj_date">健身日期：</string>
    <string name="train_subj_date_hint">2017年12月21日</string>
    <string name="train_subj_date_dialog_title">日期选择</string>
    <string name="train_subj_time_hint">11:27:51</string>
    <string name="train_subj_advice">健身感受</string>
    <string name="train_subj_advice_hint">请输入健身感受</string>
    <string name="train_subj_add_new_item">添加健身项目</string>
    <string name="train_subj_name_dialog_title">健身主题</string>
    <string name="train_subj_save_dialog_content">是否要保存当前内容？</string>

</resources>
